--- a/templates/configurateur/layout.html.twig
+++ b/templates/configurateur/layout.html.twig
@@ -1,5 +1,7 @@
 {% extends 'layouts/default.html.twig' %}
-
+{% block title %}
+	Configurateur
+{% endblock %}
 {% block body %}
 {{ include('configurateur/panier.html.twig') }}
 {{ include('configurateur/categories.html.twig') }}
