--- a/templates/layouts/default.html.twig
+++ b/templates/layouts/default.html.twig
@@ -31,7 +31,7 @@
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
-<body>
+<body id='index'>
     {% include "partials/navbar.html.twig" %}
     {% block body %}{% endblock %}
 </body>
