--- a/templates/configurateur/panier.html.twig
+++ b/templates/configurateur/panier.html.twig
@@ -1,1 +1,61 @@
-<div>Panier</div>
+<div class="mt-3">
+	<table class="table table-striped table-secondary">
+		<thead>
+			<tr>
+				<th scope="col">
+					Catégorie
+				</th>
+				<th scope="col">
+					Marque
+				</th>
+				<th scope="col">
+					Modèle
+				</th>
+				<th scope="col">
+					Prix
+				</th>
+				<th scope="col"></th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for item in panier %}
+				{% if item.name is defined %}
+					<tr>
+						<th scope="row">
+							{{ item.category.getName() }}
+						</th>
+						<td>
+							{{ item.name }}
+						</td>
+						<td>
+							{{ item.modele }}
+						</td>
+						<td>
+							{{ item.getFormattedPrice }}
+						</td>
+						<td>
+							<a href="{{
+								path(
+									'removeCart',
+									{
+										categorie: item.category.getSlug()
+									}
+								)
+								}}">
+								<button class="btn btn-danger">X</button>
+							</a>
+						</td>
+					</tr>
+				{% endif %}
+			{% endfor %}
+		</tbody>
+	</table>
+        <p>{{ somme }}</p>
+
+	{# <p>{{panier.boitier.name}} {{panier.boitier.getFormattedPrice()}}</p>
+    <p>{{panier.alimentation.name }} {{panier.alimentation.getFormattedPrice()}}</p>
+    <p>{{panier.processeur.name }} {{panier.processeur.getFormattedPrice()}}</p>
+    <p>{{panier.carteMere.name }} {{panier.carteMere.getFormattedPrice()}}</p>
+    <p>{{panier.carteGraphique.name }} {{panier.carteGraphique.getFormattedPrice()}}</p>
+    <p>{{panier.ram.name }} {{panier.ram.getFormattedPrice()}}</p> #}
+</div>
