--- a/templates/accueil/panierUser.html.twig
+++ b/templates/accueil/panierUser.html.twig
@@ -3,10 +3,12 @@
 		Reprendre vos anciennes configurations :
 	</p>
 	{% for item in panierUser %}
-		<button class="btn btn-primary">
-			<p>
-				{{ item.getCreatedAt()|format_datetime('full', 'short', locale = 'fr') }}
-			</p>
-		</button>
+		<a href="{{  path('configurateur', {'panier' : item.id}) }}">
+			<button class="btn btn-primary">
+				<p>
+					{{ item.getCreatedAt()|format_datetime('full', 'short', locale = 'fr') }}
+				</p>
+			</button>
+		</a>
 	{% endfor %}
 </div>
