--- a/templates/configurateur/panier.html.twig
+++ b/templates/configurateur/panier.html.twig
@@ -1,4 +1,5 @@
 <div class="mt-3">
+	Panier n° {{ (app.session.get('panier')) }}
 	<table class="table table-striped table-secondary">
 		<thead>
 			<tr>
