--- a/templates/layouts/default.html.twig
+++ b/templates/layouts/default.html.twig
@@ -6,7 +6,7 @@
     <meta name="description" content="Site de comparaison de matériel informatique.">
     <meta name="google-site-verification" content="hgrnQJruiGm9EiwhZSSUQAlVITO6BBIC7ciG5E6suhM" />
     <title>Pc pas à pas - {% block title %}{% endblock %}</title>
-    <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" href="{{ asset('favicon.ico') }}" />
         <!-- Google tag (gtag.js) -->
         <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-153ZZY7C5M"></script>
         <script>
