--- a/templates/layouts/default.html.twig
+++ b/templates/layouts/default.html.twig
@@ -21,7 +21,7 @@
      -->
         </script>
         <!-- GOOGLE ADSENSE -->
-        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2401412736769800" crossorigin="anonymous"></script> -->
+        {# <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2401412736769800" crossorigin="anonymous"></script> #}
         <!-- GOOGLE ADSENSE END -->
 
     {% block stylesheets %}
