--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,7 +2,8 @@ $theme-colors: (
   "primary":#E3DFFD,
   "secondary": #37123C,
   "trois": #ECF2FF,
-  "danger":#C95D63
+  "danger":#C95D63,
+  "info": #C95D63
 );
 
 @import "~bootstrap/scss/bootstrap";
