--- a/templates/accueil/entete.html.twig
+++ b/templates/accueil/entete.html.twig
@@ -1,7 +1,7 @@
 <div class="d-flex bg-white div-principale ">
     <img class="w-50 img-composition mx-auto" src="{{ asset('images/compositionhdd.avif') }}" alt="composants d'un ordinateur">
     <div class="mx-auto text-center">
-        <h2 class="text-center mx-auto my-3" style="font-family: Mynerve">Créez votre ordinateur sur mesure</h2>
+        <h2 class="text-center mx-auto my-3 text-secondary" style="font-family: Mynerve">Créez votre ordinateur sur mesure</h2>
         {% if app.session.get('panier') != null %}
             <a href="{{ path('configurateur') }}" class="text-center mb-3">
                 <button class="text-center mx-auto my-3 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite	infinite">
