--- a/templates/configurateur/categories.html.twig
+++ b/templates/configurateur/categories.html.twig
@@ -1,10 +1,19 @@
-{% block title %}
-	Configurateur
-{% endblock %}
 <div>
+	<h2>
+		Choisissez vos composants
+	</h2>
 	{% for categorie in categories %}
 		{% if panier[categorie.slug] == null %}
-			<a href="{{ path('configurateur.cat', {'slug': categorie.slug}) }}"><button class="btn btn-primary">{{ categorie.name }}</button></a>
+			<a href="{{
+				path(
+					'configurateur.cat',
+					{
+						slug: categorie.slug
+					}
+				)
+				}}">
+				<button class="btn btn-primary">{{ categorie.name }}</button>
+			</a>
 		{% endif %}
 	{% endfor %}
 </div>
