--- a/templates/configurateur/panier.html.twig
+++ b/templates/configurateur/panier.html.twig
@@ -1,68 +1,94 @@
-<div class="mt-3">
-	Panier n° {{ app.session.get('panier') }}
-	<table class="table table-striped table-secondary">
-		<thead>
-			<tr>
-				<th scope="col">
-					Catégorie
-				</th>
-				<th scope="col">
-					Marque
-				</th>
-				<th scope="col">
-					Modèle
-				</th>
-				<th scope="col">
-					Prix
-				</th>
-				<th scope="col"></th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for item in panier %}
-				{% if item.name is defined %}
-					<tr>
-						<th scope="row">
-							{{ item.category.getName() }}
-						</th>
-						<td>
-							{{ item.name }}
-						</td>
-						<td>
-							{{ item.modele }}
-						</td>
-						<td>
-							{{ item.getFormattedPrice }}
-						</td>
-						<td>
-							<a href="{{
-								path(
-									'removeCart',
-									{
-										categorie: item.category.getSlug()
-									}
-								)
-								}}">
-								<button class="btn btn-danger">X</button>
-							</a>
-						</td>
-					</tr>
-				{% endif %}
-			{% endfor %}
-		</tbody>
-	</table>
-	<p>
-		{{ somme }}
-	</p>
-	<div class="hr-min mx-auto my-3" id="connect"></div>
+{% if panierEntity is defined and panierEntity.name == null %}
+	<form action="{{ path('save.cart') }}" method="post">
+		<div class="row g-3 align-items-center mb-3">
+			<div class="col-8">
+				<input type="text" name="name" id="name" placeholder="Nom de votre configuration" class="form-control" />
+			</div>
+			<div class="col-4">
+				<button type="submit" class="btn btn-primary">Sauvegarder votre configuration</button>
+			</div>
+		</div>
+	</form>
+{% else %}
+	{% if panierEntity is defined %}
+		<h2>
+			Configuration : {{ panierEntity.name }}
+		</h2>
+	{% endif %}
+{% endif %}
+{% if somme != '0,00€' %}
+	<div class="mt-3">
+		<a href="{{ path('configurateur.new') }}" class="text-center">
+			<button class="text-center mx-auto my-3 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
+				id="start-config">
+				Commencer une nouvelle configuration ...
+			</button>
+		</a>
 
-	{# <p>{{panier.boitier.name}} {{panier.boitier.getFormattedPrice()}}</p>
+		<table class="table table-striped table-secondary">
+			<thead>
+				<tr>
+					<th scope="col">
+						Catégorie
+					</th>
+					<th scope="col">
+						Marque
+					</th>
+					<th scope="col">
+						Modèle
+					</th>
+					<th scope="col">
+						Prix
+					</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for item in panier %}
+					{% if item.name is defined %}
+						<tr>
+							<th scope="row">
+								{{ item.category.getName() }}
+							</th>
+							<td>
+								{{ item.name }}
+							</td>
+							<td>
+								{{ item.modele }}
+							</td>
+							<td>
+								{{ item.getFormattedPrice }}
+							</td>
+							<td>
+								<a href="{{
+									path(
+										'removeCart',
+										{
+											categorie: item.category.getSlug()
+										}
+									)
+									}}">
+									<button class="btn btn-danger">X</button>
+								</a>
+							</td>
+						</tr>
+					{% endif %}
+				{% endfor %}
+			</tbody>
+		</table>
+		<p>
+			{{ somme }}
+		</p>
+		<div class="hr-min mx-auto my-3" id="connect"></div>
+
+		{# <p>{{panier.boitier.name}} {{panier.boitier.getFormattedPrice()}}</p>
     <p>{{panier.alimentation.name }} {{panier.alimentation.getFormattedPrice()}}</p>
     <p>{{panier.processeur.name }} {{panier.processeur.getFormattedPrice()}}</p>
     <p>{{panier.carteMere.name }} {{panier.carteMere.getFormattedPrice()}}</p>
     <p>{{panier.carteGraphique.name }} {{panier.carteGraphique.getFormattedPrice()}}</p>
     <p>{{panier.ram.name }} {{panier.ram.getFormattedPrice()}}</p> #}
-</div>
+	</div>
+{% endif %}
 <style>
 	.hr-min { border-top: 0.4em solid #37123C; border-radius: 1em; text-align: center; width: 85%; }
 </style>
