--- a/templates/configurateur/panier.html.twig
+++ b/templates/configurateur/panier.html.twig
@@ -1,4 +1,4 @@
-{% if panierEntity is defined and panierEntity.name == null %}
+{% if panierEntity is defined and panierEntity.name == null and app.user %}
 	<form action="{{ path('save.cart') }}" method="post">
 		<div class="row g-3 align-items-center mb-3">
 			<div class="col-8">
@@ -10,11 +10,25 @@
 		</div>
 	</form>
 {% else %}
-	{% if panierEntity is defined %}
+	{% if panierEntity is defined and app.user %}
 		<h2>
 			Configuration : {{ panierEntity.name }}
 		</h2>
 	{% endif %}
+{% endif %}
+{% if app.user == null %}
+	<a href="{{ path('app_login') }}" class="text-center">
+		<button class="text-center mx-auto my-1 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
+			id="start-config">
+			Connectez-vous pour sauvegarder votre configuration
+		</button>
+	</a>
+	<a href="{{ path('app_register') }}" class="text-center">
+		<button class="text-center mx-auto my-1 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
+			id="start-config">
+			Je n'ai pas de compte
+		</button>
+	</a>
 {% endif %}
 {% if somme != '0,00€' %}
 	<div class="mt-3">
