--- a/templates/accueil/login.html.twig
+++ b/templates/accueil/login.html.twig
@@ -1,25 +1,40 @@
 <form method="post" action="/login">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<div class="row align-items-center mx-auto d-flex">
+		{% if error %}
+			<div class="alert alert-danger">
+				{{ error.messageKey|trans(error.messageData, 'security') }}
+			</div>
+		{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            Vous êtes connecté :  {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-        </div>
+		{% if app.user %}
+			{# <div class="mb-3">
+				{{ app.user.userIdentifier }}
+				<a href="{{ path('app_logout') }}"><button class="btn btn-primary">Se déconnecter</button></a>
+			</div> #}
+		{% else %}
+			<div class="col-auto col-6 mx-auto">
+				<label for="inputEmail">Email</label>
+				<input type="email"
+					value="{{ last_username }}"
+					name="email"
+					id="inputEmail"
+					class="form-control"
+					autocomplete="email"
+					required
+					autofocus />
+			</div>
+			<div class="col-auto col-6 mx-auto">
+				<label for="inputPassword">Mot de passe</label>
+				<input type="password"
+					name="password"
+					id="inputPassword"
+					class="form-control"
+					autocomplete="current-password"
+					required />
+			</div>
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
 
-    {% else %}
-    <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
+			{#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
 
@@ -29,9 +44,17 @@
             </label>
         </div>
     #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Se connecter
-    </button>
-    {% endif %}
+			<div class="col-auto mx-auto">
+				<button class="btn btn-lg btn-primary mt-3" type="submit">Se connecter</button>
+				<a href="{{ path('app_register') }}" class="btn btn-lg btn-primary mt-3">Créer un compte</a>
+			</div>
+		{% endif %}
+	</div>
+	{% if app.user == null %}
+		<div class="hr-min mx-auto my-3" id="connect"></div>
+	{% endif %}
 </form>
+
+<style>
+	.hr-min { border-top: 0.4em solid #37123C; border-radius: 1em; text-align: center; width: 85%; }
+</style>
