--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,16 +1,19 @@
 {% extends 'layouts/default.html.twig' %}
 
-{% block title %}Créer un compte{% endblock %}
+{% block title %}
+	Créer un compte
+{% endblock %}
 
 {% block body %}
-    <h1>Créer votre  compte</h1>
+	<h1>
+		Créer votre compte
+	</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
+	{{ form_start(registrationForm) }}
+	{{ form_row(registrationForm.email) }}
+	{{ form_row(registrationForm.password.first) }}
+	{{ form_row(registrationForm.password.second) }}
 
-        <button type="submit" class="btn">Créer votre compte</button>
-    {{ form_end(registrationForm) }}
+	<button type="submit" class="btn btn-primary">Créer votre compte</button>
+	{{ form_end(registrationForm) }}
 {% endblock %}
