--- a/templates/configurateur/configDetails.html.twig
+++ b/templates/configurateur/configDetails.html.twig
@@ -1,5 +1,8 @@
 {% if somme != '0,00€' %}
 	<div class="hr-min mx-auto my-3" id="connect"></div>
+	<h2 class="text-center mx-auto my-3 text-secondary" style="font-family: Mynerve">
+		Votre configuration détaillée
+	</h2>
 	<div class="div-config">
 		{% for key, item in panier %}
 			{% if item != null %}
