--- a/templates/jeux/show.html.twig
+++ b/templates/jeux/show.html.twig
@@ -6,7 +6,9 @@
 
 {% block body %}
 	<div>
-		<a href="{{ path('app_jeux') }}">Revenir à la liste des jeux</a>
+		<a href="{{ path('homepage') }}">Accueil</a>
+		>
+		<a href="{{ path('app_jeux') }}">Liste des jeux</a>
 		<h1>
 			{{ jeu.name }}
 		</h1>
