--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -6,7 +6,15 @@
 
 {% block body %}
 	<div id="index">
-		{{ include('accueil/login.html.twig') }}
+		{{ include('partials/login.html.twig') }}
 		{{ include('accueil/entete.html.twig') }}
+		<div class="hr-min mx-auto my-3" id="connect"></div>
+		{% include 'accueil/configRecommandees.html.twig' %}
+		<div class="hr-min mx-auto my-3" id="connect"></div>
+		{% include 'accueil/dernieresConfig.html.twig' %}
 	</div>
+
+	<style>
+		.hr-min { border-top: 0.4em solid #37123C; border-radius: 1em; text-align: center; width: 85%; }
+	</style>
 {% endblock %}
