--- a/templates/configurateur/composants.html.twig
+++ b/templates/configurateur/composants.html.twig
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex" id='composants'>
 	{% for composant in composants %}
 		<div class="card" style="width: 18rem;">
 			<img src="{{ asset('./images/') ~ composant.category.slug ~ '/' ~ composant.id ~ '.jpg' }}"
