--- a/templates/configurateur/panier.html.twig
+++ b/templates/configurateur/panier.html.twig
@@ -1,44 +1,33 @@
-{% if panierEntity is defined and panierEntity.name == null and app.user %}
-	<form action="{{ path('save.cart') }}" method="post">
-		<div class="row g-3 align-items-center mb-3">
-			<div class="col-8">
-				<input type="text" name="name" id="name" placeholder="Nom de votre configuration" class="form-control" />
-			</div>
-			<div class="col-4">
-				<button type="submit" class="btn btn-primary">Sauvegarder votre configuration</button>
-			</div>
-		</div>
-	</form>
-{% else %}
-	{% if panierEntity is defined and app.user %}
-		<h2>
-			Configuration : {{ panierEntity.name }}
-		</h2>
-	{% endif %}
-{% endif %}
 {% if app.user == null %}
-	<a href="{{ path('app_login') }}" class="text-center">
-		<button class="text-center mx-auto my-1 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
-			id="start-config">
-			Connectez-vous pour sauvegarder votre configuration
-		</button>
-	</a>
-	<a href="{{ path('app_register') }}" class="text-center">
-		<button class="text-center mx-auto my-1 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
-			id="start-config">
-			Je n'ai pas de compte
-		</button>
-	</a>
+	<h2 class="text-center mx-auto my-3 text-secondary" style="font-family: Mynerve">
+		Connectez-vous pour sauvegarder votre configuration
+	</h2>
+	{% include 'partials/login.html.twig' %}
 {% endif %}
 {% if somme != '0,00€' %}
-	<div class="mt-3">
-		<a href="{{ path('configurateur.new') }}" class="text-center">
-			<button class="text-center mx-auto my-3 fs-5 bg-primary border border-secondary py-2 rounded animate__animated animate__pulse animate__infinite infinite"
-				id="start-config">
-				Commencer une nouvelle configuration ...
-			</button>
-		</a>
+	<h2 class="text-center mx-auto my-3 text-secondary" style="font-family: Mynerve">
+		Votre configuration
+	</h2>
+	{% if panierEntity is defined and panierEntity.name == null and app.user %}
+		<form action="{{ path('save.cart') }}" method="post">
+			<div class="row g-3 align-items-center mb-3">
+				<div class="col-8">
+					<input type="text" name="name" id="name" placeholder="Nom de votre configuration" class="form-control" />
+				</div>
+				<div class="col-4">
+					<button type="submit" class="btn btn-primary">Sauvegarder votre configuration</button>
+				</div>
+			</div>
+		</form>
+	{% else %}
+		{% if panierEntity is defined and app.user %}
+			<h2>
+				Configuration : {{ panierEntity.name }}
+			</h2>
+		{% endif %}
+	{% endif %}
 
+	<div class="mt-3">
 		<table class="table table-striped table-secondary">
 			<thead>
 				<tr>
@@ -90,9 +79,15 @@
 				{% endfor %}
 			</tbody>
 		</table>
-		<p>
-			{{ somme }}
+		<p class="btn btn-secondary d-block fs-3">
+			<em>Prix de votre configuration : {{ somme }}</em>
 		</p>
+
+		<a href="{{ path('configurateur.new') }}" class="text-center">
+			<button class="text-center mx-auto my-1 bg-primary border border-secondary py-1 rounded" id="start-config">
+				Commencer une nouvelle configuration ...
+			</button>
+		</a>
 		<div class="hr-min mx-auto my-3" id="connect"></div>
 
 		{# <p>{{panier.boitier.name}} {{panier.boitier.getFormattedPrice()}}</p>
