--- a/templates/layouts/default.html.twig
+++ b/templates/layouts/default.html.twig
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Site de comparaison de matériel informatique." />
-		<meta name="robots" content="index" />
+		<meta name="robots" content="all" />
 		<meta name="google-site-verification" content="hgrnQJruiGm9EiwhZSSUQAlVITO6BBIC7ciG5E6suhM" />
 		<title>
 			Pc pas à pas -{% block title %}
