--- a/templates/pages/tutos.html.twig
+++ b/templates/pages/tutos.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="example-wrapper">
+<div id="tutos">
     <p>
     config hmr for reload twig et symfony avec webpack
     <textarea>
@@ -53,5 +53,8 @@ class Kernel extends BaseKernel
     }
 }
     </textarea>
+
+    <hello-element></hello-element>
+    <test-vueelement></test-vueelement>
 </div>
 {% endblock %}
