--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,13 +1,11 @@
 $theme-colors: (
-  "primary":#E3DFFD,
-  "secondary": #37123C,
-  "trois": #ECF2FF,
-  "danger":#C95D63,
-  "info": #C95D63
+	'primary': #e3dffd,
+	'secondary': #37123c,
+	'trois': #ecf2ff,
+	'danger': #c95d63,
+	'info': #c95d63,
 );
 
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
 @import url('https://fonts.googleapis.com/css2?family=Actor&family=Gwendolyn:wght@700&family=Indie+Flower&family=Labrada&family=Mynerve&family=Pacifico&family=Parisienne&family=Permanent+Marker&family=Sansita:ital@1&display=swap');
-
-
