--- a/templates/accueil/configRecommandees.html.twig
+++ b/templates/accueil/configRecommandees.html.twig
@@ -11,7 +11,7 @@
 				}
 			)
 			}}">
-			<img src="{{ asset('/images/Jeux/') ~ jeu.slug ~ '.avif' }}" alt="jeu.name" class="logoJeu m-3" />
+			<img src="/images/Jeux/{{jeu.slug}}.avif" alt="jeu.name" class="logoJeu m-3" />
 		</a>
 	{% endfor %}
 </div>
