--- a/templates/accueil/entete.html.twig
+++ b/templates/accueil/entete.html.twig
@@ -29,7 +29,7 @@
 		{% endif %}
 	</div>
 	<img class="w-50 img-composition mx-auto"
-		src="{{ asset('images/compositionhdd.avif') }}"
+		src="images/compositionhdd.avif"
 		alt="composants d'un ordinateur" />
 </div>
 
