--- a/templates/layouts/default.html.twig
+++ b/templates/layouts/default.html.twig
@@ -32,7 +32,7 @@
 		{% endblock %}
 
 		{% block javascripts %}
-			{{ vite_entry_script_tags('app', { dependency: 'react' }) }}
+			{{ vite_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
 	<body id="index">
