--- a/templates/partials/login.html.twig
+++ b/templates/partials/login.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="/login">
+<form method="post" action="/">
 	<div class="row align-items-center mx-auto d-flex">
 		{% if error %}
 			<div class="alert alert-danger">
