--- a/templates/partials/login.html.twig
+++ b/templates/partials/login.html.twig
@@ -20,8 +20,7 @@
 					id="inputEmail"
 					class="form-control"
 					autocomplete="email"
-					required
-					autofocus />
+					required/>
 			</div>
 			<div class="col-auto col-6 mx-auto">
 				<label for="inputPassword">Mot de passe</label>
